--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>modeshape-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5.0.fcr</version>
     <relativePath>../modeshape-parent</relativePath>
   </parent>
 
