--- a/web/modeshape-webdav/pom.xml
+++ b/web/modeshape-webdav/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fcrepo</groupId>
         <artifactId>modeshape-parent</artifactId>
-        <version>5.5.0.fcr</version>
+        <version>5.6.0.fcr-SNAPSHOT</version>
         <relativePath>../../modeshape-parent</relativePath>
     </parent>
     <artifactId>modeshape-webdav</artifactId>
