--- a/integration/modeshape-jbossas-integration-tests/pom.xml
+++ b/integration/modeshape-jbossas-integration-tests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.fcrepo</groupId>
         <artifactId>modeshape-parent</artifactId>
-        <version>5.5.0.fcr</version>
+        <version>5.6.0.fcr-SNAPSHOT</version>
         <relativePath>../../modeshape-parent/pom.xml</relativePath>
     </parent>
     <!-- The groupId and version values are inherited from parent  -->
