--- a/modeshape-parent/pom.xml
+++ b/modeshape-parent/pom.xml
@@ -166,7 +166,7 @@
         <version.org.apache.chemistry.opencmis.server.jcr>0.11.0</version.org.apache.chemistry.opencmis.server.jcr>
         <version.com.google.gwt>2.5.1</version.com.google.gwt>
         <version.com.smartgwt>2.4</version.com.smartgwt>
-        <version.com.googlecode.gwtmosaic>0.4.0-rc2</version.com.googlecode.gwtmosaic>
+        <version.com.googlecode.gwtmosaic>2.0.1</version.com.googlecode.gwtmosaic>
         <version.commons-fileupload>1.3.1</version.commons-fileupload>
         <version.org.jboss.spec.javax.resource.jboss-connector-api_1.7_spec>1.0.0.Final</version.org.jboss.spec.javax.resource.jboss-connector-api_1.7_spec>
         <version.org.jboss.ironjacamar>1.0.13.Final</version.org.jboss.ironjacamar>
@@ -1385,7 +1385,7 @@
                 <version>${version.com.smartgwt}</version>
             </dependency>
             <dependency>
-                <groupId>com.googlecode.gwtmosaic</groupId>
+                <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-incubator</artifactId>
                 <version>${version.com.googlecode.gwtmosaic}</version>
             </dependency>
