--- a/web/modeshape-web-explorer/pom.xml
+++ b/web/modeshape-web-explorer/pom.xml
@@ -58,7 +58,7 @@
         </dependency>
         
         <dependency>
-            <groupId>com.googlecode.gwtmosaic</groupId>
+            <groupId>com.google.gwt</groupId>
             <artifactId>gwt-incubator</artifactId>
         </dependency>
 
