--- a/modeshape-jca/pom.xml
+++ b/modeshape-jca/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>ironjacamar-depchain</artifactId>
             <scope>test</scope>
             <type>pom</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>apache-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jboss.ironjacamar</groupId>
