--- a/boms/modeshape-bom-embedded/pom.xml
+++ b/boms/modeshape-bom-embedded/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fcrepo</groupId>
         <artifactId>modeshape</artifactId>
-        <version>5.6.0.fcr-SNAPSHOT</version>
+        <version>5.5.1.fcr</version>
         <relativePath>../..</relativePath>
     </parent>
 
@@ -35,7 +35,7 @@
         <connection>scm:git:git://github.com/fcrepo4-exts/modeshape.git</connection>
         <developerConnection>scm:git:git@github.com:fcrepo4-exts/modeshape.git</developerConnection>
         <url>http://github.com/fcrepo4-exts/modeshape</url>
-      <tag>HEAD</tag>
+      <tag>modeshape-5.5.1.fcr</tag>
   </scm>
 
     <issueManagement>
