--- a/checkstyle/pom.xml
+++ b/checkstyle/pom.xml
@@ -5,7 +5,7 @@
    <parent>
        <groupId>org.fcrepo</groupId>
        <artifactId>modeshape</artifactId>
-       <version>5.6.0.fcr-SNAPSHOT</version>
+       <version>5.5.1.fcr</version>
    </parent>
    <artifactId>modeshape-checkstyle</artifactId>
    <name>ModeShape Checkstyle Rules</name>
