--- a/deploy/jbossas/modeshape-jbossas-web-webdav-war/pom.xml
+++ b/deploy/jbossas/modeshape-jbossas-web-webdav-war/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.fcrepo</groupId>
         <artifactId>modeshape-parent</artifactId>
-        <version>5.6.0.fcr-SNAPSHOT</version>
+        <version>5.5.1.fcr</version>
         <relativePath>../../../modeshape-parent/pom.xml</relativePath>
     </parent>
     <artifactId>modeshape-jbossas-web-webdav-war</artifactId>
