--- a/index-providers/modeshape-elasticsearch-index-provider/pom.xml
+++ b/index-providers/modeshape-elasticsearch-index-provider/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.fcrepo</groupId>
         <artifactId>modeshape-index-providers</artifactId>
-        <version>5.6.0.fcr-SNAPSHOT</version>
+        <version>5.5.1.fcr</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <!-- The groupId and version values are inherited from parent -->
