--- a/modeshape-assembly-descriptors/pom.xml
+++ b/modeshape-assembly-descriptors/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.fcrepo</groupId>
         <artifactId>modeshape-parent</artifactId>
-        <version>5.6.0.fcr-SNAPSHOT</version>
+        <version>5.5.1.fcr</version>
         <relativePath>../modeshape-parent/pom.xml</relativePath>
     </parent>
 
