--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.fcrepo</groupId>
     <artifactId>modeshape</artifactId>
-    <version>5.6.0.fcr-SNAPSHOT</version>
+    <version>5.5.1.fcr</version>
 
     <packaging>pom</packaging>
     <name>ModeShape</name>
@@ -28,7 +28,7 @@
         <connection>scm:git:git://github.com/ModeShape/modeshape.git</connection>
         <developerConnection>scm:git:git@github.com:ModeShape/modeshape.git</developerConnection>
         <url>http://github.com/ModeShape/modeshape</url>
-      <tag>HEAD</tag>
+      <tag>modeshape-5.5.1.fcr</tag>
   </scm>
 
     <modules>
