--- a/web/modeshape-web-explorer/pom.xml
+++ b/web/modeshape-web-explorer/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.fcrepo</groupId>
         <artifactId>modeshape-parent</artifactId>
-        <version>5.6.0.fcr-SNAPSHOT</version>
+        <version>5.5.1.fcr</version>
         <relativePath>../../modeshape-parent</relativePath>
     </parent>
     <artifactId>modeshape-web-explorer</artifactId>
